--- a/app/src/main/res/layout/fragment_visitas.xml
+++ b/app/src/main/res/layout/fragment_visitas.xml
@@ -36,18 +36,6 @@
             android:layout_marginTop="70dp"
             android:orientation="vertical">
 
-            <!--            <com.google.android.material.textfield.TextInputLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="match_parent">-->
-
-            <!--                <com.google.android.material.textfield.TextInputEditText-->
-            <!--                    android:id="@+id/descEspecial"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:hint="Descripcion" />-->
-            <!--            </com.google.android.material.textfield.TextInputLayout>-->
-
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layoutDescEspecial"
                 android:layout_width="match_parent"
@@ -66,68 +54,22 @@
                     tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutVisitaInd"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                app:errorEnabled="true">
 
-                <ImageButton
-                    android:id="@+id/obtenerFecha"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/visitaIndividual"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="6"
-                    android:background="@color/AzulOscuro"
-                    android:src="@drawable/icono_citas"
-                    tools:ignore="SpeakableTextPresentCheck" />
-
-                <Space
-                    android:layout_width="15dp"
-                    android:layout_height="match_parent" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/terapia"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:editable="false"
-                        android:hint="Fecha"
-                        tools:ignore="Deprecated,TouchTargetSizeCheck" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="40dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/agregarVisita"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="@drawable/boton"-->
-<!--                    android:text="Agregar"-->
-<!--                    android:textSize="18sp" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="15dp"-->
-<!--                    android:layout_height="wrap_content" />-->
-
-<!--                <Button-->
-<!--                    android:id="@+id/quitarVisita"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="@drawable/boton"-->
-<!--                    android:text="Quitar"-->
-<!--                    android:textSize="18sp" />-->
-<!--            </LinearLayout>-->
+                    android:layout_height="wrap_content"
+                    android:hint="Costo Visita Individual"
+                    android:enabled="false"
+                    android:inputType="numberDecimal"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/agregarVisita"
@@ -151,26 +93,6 @@
                 android:textColor="@color/Blanco"
                 android:textSize="24sp" />
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fillViewport="true">
-
-                    <TableLayout
-                        android:id="@+id/tablaVisitas"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center">
-
-                    </TableLayout>
-                </HorizontalScrollView>
-            </ScrollView>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -193,11 +115,31 @@
                     android:layout_height="24dp"
                     android:layout_weight="1.3"
                     android:gravity="center"
-                    android:textStyle="bold"
                     android:text="00.00"
                     android:textColor="@color/Blanco"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fillViewport="true">
+
+                    <TableLayout
+                        android:id="@+id/tablaVisitas"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"></TableLayout>
+                </HorizontalScrollView>
+            </ScrollView>
+
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
