--- a/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
+++ b/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
@@ -36,9 +36,67 @@
             android:layout_marginTop="70dp"
             android:orientation="vertical">
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutDescEspecial"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="80"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/descEspecial"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Descripcion"
+                    android:inputType="text"
+                    android:maxLength="80"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutPagoIndividual"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/pagoIndividual"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Costo Visita Individual"
+                    android:enabled="false"
+                    android:inputType="numberDecimal"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/agregarPago"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/AzulOscuro"
+                android:drawableLeft="@drawable/ic_add"
+                android:paddingLeft="10dp"
+                android:text="Agregar Visita"
+                android:textColor="@color/Blanco" />
+
+            <TextView
+                android:id="@+id/tituloPagos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/AzulOscuro"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="Visitas:"
+                android:textColor="@color/Blanco"
+                android:textSize="24sp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -48,7 +106,7 @@
                     android:layout_weight="0.7"
                     android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Gastos:"
+                    android:text="Total:"
                     android:textSize="18sp" />
 
                 <TextView
@@ -63,155 +121,6 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/obtenerFecha"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="6"
-                    android:background="@color/AzulOscuro"
-                    android:src="@drawable/icono_citas"
-                    tools:ignore="SpeakableTextPresentCheck" />
-
-<!--                <Space-->
-<!--                    android:layout_width="15dp"-->
-<!--                    android:layout_height="match_parent" />-->
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/fecha"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:editable="false"
-                        android:hint="Fecha"
-                        tools:ignore="Deprecated,TouchTargetSizeCheck" />
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-
-            <!--            <com.google.android.material.textfield.TextInputLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="match_parent"-->
-            <!--                android:layout_marginTop="10dp">-->
-
-            <!--                <com.google.android.material.textfield.TextInputEditText-->
-            <!--                    android:id="@+id/descPagos"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:hint="Descripcion"-->
-            <!--                    tools:ignore="TouchTargetSizeCheck" />-->
-            <!--            </com.google.android.material.textfield.TextInputLayout>-->
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layoutDescPagos"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                app:counterEnabled="true"
-                app:counterMaxLength="80"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/descPagos"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Descripcion"
-                    android:inputType="text"
-                    android:maxLength="80"
-                    tools:ignore="TouchTargetSizeCheck" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!--            <com.google.android.material.textfield.TextInputLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="match_parent">-->
-
-            <!--                <com.google.android.material.textfield.TextInputEditText-->
-            <!--                    android:id="@+id/costoPagos"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:hint="C"-->
-            <!--                    tools:ignore="TouchTargetSizeCheck" />-->
-            <!--            </com.google.android.material.textfield.TextInputLayout>-->
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layoutCostoPagos"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:counterEnabled="true"
-                app:counterMaxLength="10"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/costoPagos"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Pago"
-                    android:inputType="numberDecimal"
-                    android:maxLength="10"
-                    tools:ignore="TouchTargetSizeCheck" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!--            <LinearLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="40dp"-->
-            <!--                android:layout_marginTop="10dp"-->
-            <!--                android:orientation="horizontal">-->
-
-            <!--                <Button-->
-            <!--                    android:id="@+id/agregarPago"-->
-            <!--                    android:layout_width="wrap_content"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:layout_weight="1"-->
-            <!--                    android:background="@drawable/boton"-->
-            <!--                    android:text="Agregar"-->
-            <!--                    android:textSize="18sp" />-->
-
-            <!--                <Space-->
-            <!--                    android:layout_width="15dp"-->
-            <!--                    android:layout_height="wrap_content" />-->
-
-            <!--                <Button-->
-            <!--                    android:id="@+id/quitarPago"-->
-            <!--                    android:layout_width="wrap_content"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:layout_weight="1"-->
-            <!--                    android:background="@drawable/boton"-->
-            <!--                    android:text="Quitar"-->
-            <!--                    android:textSize="18sp" />-->
-            <!--            </LinearLayout>-->
-
-            <Button
-                android:id="@+id/agregarPago"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:drawableLeft="@drawable/ic_add"
-                android:paddingLeft="10dp"
-                android:text="Agregar Pago"
-                android:textColor="@color/Blanco" />
-
-            <TextView
-                android:id="@+id/tituloPagos"
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="Pagos:"
-                android:textColor="@color/Blanco"
-                android:textSize="24sp" />
-
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -223,42 +132,14 @@
                     android:fillViewport="true">
 
                     <TableLayout
-                        android:id="@+id/tablaPagos"
+                        android:id="@+id/tablaVisitas"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_gravity="center">
-
-                    </TableLayout>
+                        android:layout_gravity="center"></TableLayout>
                 </HorizontalScrollView>
             </ScrollView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tituloAbono"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.7"
-                    android:background="@color/AzulOscuro"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="Total:"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/totalAbono"
-                    android:layout_width="wrap_content"
-                    android:layout_height="24dp"
-                    android:layout_weight="1.3"
-                    android:gravity="center"
-                    android:text="00.00"
-                    android:textColor="@color/Blanco"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
