--- a/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
+++ b/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
@@ -101,6 +101,34 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tituloVisitas"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.7"
+                    android:background="@color/AzulOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Total:"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/totalVisita"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_weight="1.3"
+                    android:gravity="center"
+                    android:text="00.00"
+                    android:textColor="@color/Blanco"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
                     android:id="@+id/tituloTotalAbonos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
